--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content ="Add your pokemon team and calculate stats!"/>
     <meta name="author" content="Aswin V Sivan" />
+    <meta property="og:image" content="https://wallpapercat.com/w/full/1/4/7/34679-1920x1080-desktop-1080p-pokemon-anime-background-image.jpg" />
     <title>PokeTeam</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
